# pisa

./: .coveragerc  .env.example  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  GITHUB_RELEASE_GUIDE.md  LICENSE.txt  MANIFEST.in  PYPI_PUBLISH_GUIDE.md  README.md  README.rst  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/: PROJECT_STRUCTURE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cache/: README.md
docs/: MCP_INTEGRATION.md  RELEASE_NOTES_v0.1.1.md  conf.py  index.rst
example/agent_example/.prismer/: .env.example  .gitignore  README.md  agent.md  pyproject.toml
example/agent_example/.prismer/capability/function/: __init__.py  matrix_ops.py
example/agent_example/.prismer/capability/mcp/: __init__.py  softmax_mcp.py
example/agent_example/.prismer/capability/subagent/: __init__.py  text_to_table.py
example/agent_example/.prismer/loop/: __init__.py
examples/mcp/: README.md  calculator_mcp_server.py  example_hosted_mcp.py  example_stdio_mcp.py
src/pisa/: __init__.py  config.py  icon  skeleton.py  startup.py
src/pisa/agents/: README.md  __init__.py  config.py  manager.py
src/pisa/capability/: README.md  __init__.py  base.py  models.py  registry.py
src/pisa/capability/local/: __init__.py
src/pisa/capability/local/functions/: __init__.py  crawl.py  imagegen.py
src/pisa/capability/local/functions/search/: __init__.py  unified_search.py
src/pisa/capability/local/mcp/: README.md  __init__.py  environment_context.py
src/pisa/capability/local/subagent/: __init__.py  mckinsey_analyst.py
src/pisa/capability/remote/: README.md  __init__.py
src/pisa/cli/: __init__.py  live_display.py  main.py  observability_display.py  ui.py
src/pisa/cli/commands/: __init__.py  debug.py  init.py  list_capabilities.py  run.py  validate.py
src/pisa/core/context/: __init__.py  compression.py  manager.py  memory.py  models.py  serializer.py
src/pisa/core/definition/: __init__.py  loader.py  models.py  parser.py  schemas.py  validator.py
src/pisa/core/definition/templates/: agent_template.md
src/pisa/core/loop/: __init__.py  base.py  base_refactored.py  builder.py  capability_resolver.py  config.py  context.py  display_utils.py  registry.py  scanner.py  state.py
src/pisa/core/loop/modules/: __init__.py  base.py  execution.py  observe.py  planning.py  reflection.py  validation.py
src/pisa/core/loop/templates/: __init__.py  plan_execute.py
src/pisa/core/planning/: __init__.py  planner.py  replanner.py  task_tree.py
src/pisa/core/validation/: __init__.py  guardrails.py  input_validator.py  output_validator.py
src/pisa/temporal/: __init__.py  activities.py  client.py  state_storage.py  worker.py  workflows.py
src/pisa/utils/: __init__.py  context_observer.py  logger.py  markdown.py  observability.py  state_observer.py  tokens.py
tests/: README.md  __init__.py  conftest.py  test_skeleton.py
tests/e2e/: __init__.py
tests/examples/: test_mcp_examples.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_loop_mcp_lifecycle.py
